Update TLS version in tests.